test/ll_parser_input_test.test
COMMENT: line 1:
// Layered Languages Standard Lexical Analyzer Test Data
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 1:
// Layered Languages Standard Lexical Analyzer Test Data
                                                        ^
COMMENT: line 2:
//
^^
LINE_BREAK: line 2:
//
  ^
COMMENT: line 3:
// File:        ll_lexeme_standard_test.in
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 3:
// File:        ll_lexeme_standard_test.in
                                          ^
COMMENT: line 4:
// Author:      Bob Walton (walton@acm.org)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 4:
// Author:      Bob Walton (walton@acm.org)
                                           ^
COMMENT: line 5:
// Date:        Sun Jun  7 04:47:37 EDT 2015
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 5:
// Date:        Sun Jun  7 04:47:37 EDT 2015
                                            ^
COMMENT: line 6:
//
^^
LINE_BREAK: line 6:
//
  ^
COMMENT: line 7:
// The authors have placed this data in the public
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 7:
// The authors have placed this data in the public
                                                  ^
COMMENT: line 8:
// domain; they make no warranty and accept no liability
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 8:
// domain; they make no warranty and accept no liability
                                                        ^
COMMENT: line 9:
// for this data.
^^^^^^^^^^^^^^^^^
LINE_BREAK: lines 9-10:
// for this data.
                 ^
<BLANK-LINE>
^
WORD: "abc": line 11:
abc 3.4+z (x,y)
^^^
NUMERIC: "3.4+z": line 11:
abc 3.4+z (x,y)
    ^^^^^
SEPARATOR: "(": line 11:
abc 3.4+z (x,y)
          ^
WORD: "x,y": line 11:
abc 3.4+z (x,y)
           ^^^
SEPARATOR: ")": line 11:
abc 3.4+z (x,y)
              ^
LINE_BREAK: line 11:
abc 3.4+z (x,y)
               ^
QUOTED_STRING: "hi": line 12:
"hi" "ho<HT>x y<>z<LF>"
^^^^
QUOTED_STRING: "ho␉x␣y<>z␊": line 12:
"hi" "ho<HT>x y<>z<LF>"
     ^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 12:
"hi" "ho<HT>x y<>z<LF>"
                       ^
WORD: "'tis": line 13:
'tis noth'ng `but' a h'dache.
^^^^
WORD: "noth'ng": line 13:
'tis noth'ng `but' a h'dache.
     ^^^^^^^
SEPARATOR: "`": line 13:
'tis noth'ng `but' a h'dache.
             ^
WORD: "but": line 13:
'tis noth'ng `but' a h'dache.
              ^^^
SEPARATOR: "'": line 13:
'tis noth'ng `but' a h'dache.
                 ^
WORD: "a": line 13:
'tis noth'ng `but' a h'dache.
                   ^
WORD: "h'dache": line 13:
'tis noth'ng `but' a h'dache.
                     ^^^^^^^
SEPARATOR: ".": line 13:
'tis noth'ng `but' a h'dache.
                            ^
LINE_BREAK: line 13:
'tis noth'ng `but' a h'dache.
                             ^
WORD: "a.1.2.3..b...c": line 14:
a.1.2.3..b...c e5f x7+y6(5z)
^^^^^^^^^^^^^^
WORD: "e5f": line 14:
a.1.2.3..b...c e5f x7+y6(5z)
               ^^^
WORD: "x7+y6": line 14:
a.1.2.3..b...c e5f x7+y6(5z)
                   ^^^^^
SEPARATOR: "(": line 14:
a.1.2.3..b...c e5f x7+y6(5z)
                        ^
NUMERIC: "5z": line 14:
a.1.2.3..b...c e5f x7+y6(5z)
                         ^^
SEPARATOR: ")": line 14:
a.1.2.3..b...c e5f x7+y6(5z)
                           ^
LINE_BREAK: line 14:
a.1.2.3..b...c e5f x7+y6(5z)
                            ^
NUMERIC: "12.3": line 15:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
^^^^
NUMERIC: ".4": line 15:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
     ^^
NATURAL: "5": line 15:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
        ^
SEPARATOR: ".": line 15:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
         ^
NUMERIC: "6/7": line 15:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
           ^^^
NATURAL: "2": line 15:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
               ^
SEPARATOR: "|": line 15:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
                ^
NATURAL: "3": line 15:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
                 ^
SEPARATOR: "||": line 15:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
                  ^^
NUMERIC: "4:5::6:A:B": line 15:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
                    ^^^^^^^^^^
SEPARATOR: ":": line 15:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
                              ^
LINE_BREAK: line 15:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
                               ^
NUMERIC: "1,23,456": line 16:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
^^^^^^^^
NUMERIC: "1,234/6,789": line 16:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
         ^^^^^^^^^^^
NUMERIC: "1/2/3/4,5/6,7,8/9": line 16:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
                     ^^^^^^^^^^^^^^^^^
NUMERIC: "8888.12,3,4": line 16:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
                                       ^^^^^^^^^^^
LINE_BREAK: line 16:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
                                                  ^
NUMERIC: "/3": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
^^
NUMERIC: "6.34.56/": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
   ^^^^^^^^
NATURAL: "3": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
            ^
SEPARATOR: ",": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
             ^
NATURAL: "4": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
               ^
SEPARATOR: ",": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                ^
NUMERIC: ",5": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                  ^^
NUMERIC: ",6.7,8.9": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                     ^^^^^^^^
NUMERIC: "'05": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                              ^^^
NUMERIC: "'1'2'3'4": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                                  ^^^^^^^^
SEPARATOR: "'": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                                          ^
LINE_BREAK: line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                                           ^
MARK: "+-*~@#$%^&=<>_!?./": line 18:
+-*~@#$%^&=<>_!?./:"foo"x<79><LF>
^^^^^^^^^^^^^^^^^^
SEPARATOR: ":": line 18:
+-*~@#$%^&=<>_!?./:"foo"x<79><LF>
                  ^
QUOTED_STRING: "foo": line 18:
+-*~@#$%^&=<>_!?./:"foo"x<79><LF>
                   ^^^^^
WORD: "x<79><LF>": line 18:
+-*~@#$%^&=<>_!?./:"foo"x<79><LF>
                        ^^^^^^^^^
LINE_BREAK: line 18:
+-*~@#$%^&=<>_!?./:"foo"x<79><LF>
                                 ^
WORD: ".foo": line 19:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
^^^^
WORD: "/foo": line 19:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
     ^^^^
WORD: "..foo": line 19:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
          ^^^^^
MARK: ".=": line 19:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                ^^
NUMERIC: "3/x": line 19:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                   ^^^
WORD: "x/3": line 19:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                       ^^^
NUMERIC: "3.x": line 19:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                           ^^^
WORD: "x.3//": line 19:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                               ^^^^^
WORD: "comment": line 19:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                                     ^^^^^^^
NUMERIC: "<89>": line 19:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                                             ^^^^
QUOTED_STRING: "'": line 19:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                                                  ^^
ERROR: string ended by line break or end of file; line 19:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                                                    ^
LINE_BREAK: line 19:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                                                    ^
WORD: "a": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
^
SEPARATOR: "(": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
 ^
WORD: "b,c": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
  ^^^
SEPARATOR: ")": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
     ^
WORD: "d": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
       ^
SEPARATOR: "{": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
        ^
WORD: "e;f": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
         ^^^
SEPARATOR: "}": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
            ^
WORD: "g": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
              ^
SEPARATOR: "[": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
               ^
WORD: "h,i": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                ^^^
SEPARATOR: "]": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                   ^
SEPARATOR: "`": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                     ^
SEPARATOR: "`": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                      ^
WORD: "foobar": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                       ^^^^^^
SEPARATOR: "'": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                             ^
WORD: "fum": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                               ^^^
SEPARATOR: "'": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                                  ^
LINE_BREAK: line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                                   ^
COMMENT: line 21:
// form feed ␌
^^^^^^^^^^^^^
LINE_BREAK: line 21:
// form feed ␌
             ^
COMMENT: line 22:
// vertical tab ␋
^^^^^^^^^^^^^^^^
LINE_BREAK: line 22:
// vertical tab ␋
                ^
COMMENT: line 23:
// carriage return ␍
^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 23:
// carriage return ␍
                   ^
WORD: "z": line 24:
z       x // horizontal tab
^
WORD: "x": line 24:
z       x // horizontal tab
        ^
COMMENT: line 24:
z       x // horizontal tab
          ^^^^^^^^^^^^^^^^^
LINE_BREAK: line 24:
z       x // horizontal tab
                           ^
WORD: "all": line 25:
all     ␌␋␍
^^^
LINE_BREAK: line 25:
all     ␌␋␍
        ^^^
WORD: "control": line 26:
control A␁B␂C␃
^^^^^^^
WORD: "A": line 26:
control A␁B␂C␃
        ^
ERROR: illegal control character sequence; line 26:
control A␁B␂C␃
         ^
WORD: "B": line 26:
control A␁B␂C␃
          ^
ERROR: illegal control character sequence; line 26:
control A␁B␂C␃
           ^
WORD: "C": line 26:
control A␁B␂C␃
            ^
ERROR: illegal control character sequence; line 26:
control A␁B␂C␃
             ^
LINE_BREAK: line 26:
control A␁B␂C␃
              ^
ERROR: in line 27: unrecognized escape sequence:
"<Q><LF><CR><HT><BS><FF><VT><XX><SP><0E2><1>"
                            ^^^^
QUOTED_STRING: "<Q>␊␍␉␈␌␋␥␣â␁": line 27:
"<Q><LF><CR><HT><BS><FF><VT><XX><SP><0E2><1>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 27:
"<Q><LF><CR><HT><BS><FF><VT><XX><SP><0E2><1>"
                                             ^
QUOTED_STRING: "ABC␣DEFG": line 28:
"<0041><00000042>C D<00000045><0046>G"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 28:
"<0041><00000042>C D<00000045><0046>G"
                                      ^
QUOTED_STRING: "AµC␣Dã␆G": line 29:
"<0041><000000B5>C D<000000E3><0006>G"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 29:
"<0041><000000B5>C D<000000E3><0006>G"
                                      ^
QUOTED_STRING: "␁": line 30:
"<0001>"
^^^^^^^^
LINE_BREAK: line 30:
"<0001>"
        ^
QUOTED_STRING: "␀␁␂␃␄␅␆␇": line 31:
"<NUL><SOH><STX><ETX><EOT><ENQ><ACK><BEL>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 31:
"<NUL><SOH><STX><ETX><EOT><ENQ><ACK><BEL>"
                                          ^
QUOTED_STRING: "␈␉␊␊␋␌␍␎␏": line 32:
"<BS><HT><LF><NL><VT><FF><CR><SO><SI>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 32:
"<BS><HT><LF><NL><VT><FF><CR><SO><SI>"
                                      ^
QUOTED_STRING: "␐␑␒␓␔␕␖␗": line 33:
"<DLE><DC1><DC2><DC3><DC4><NAK><SYN><ETB>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 33:
"<DLE><DC1><DC2><DC3><DC4><NAK><SYN><ETB>"
                                          ^
QUOTED_STRING: "␘␙␚␛␜␝␞␟␡": line 34:
"<CAN><EOM><SUB><ESC><FS><GS><RS><US><DEL>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 34:
"<CAN><EOM><SUB><ESC><FS><GS><RS><US><DEL>"
                                           ^
ERROR: in line 35: illegal control character sequence:
"misplaced control ␁"
                   ^
QUOTED_STRING: "misplaced␣control␣␁": line 35:
"misplaced control ␁"
^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 35:
"misplaced control ␁"
                     ^
WORD: "misplaced": line 36:
misplaced space ␌ here and ␍ here
^^^^^^^^^
WORD: "space": line 36:
misplaced space ␌ here and ␍ here
          ^^^^^
ERROR: vertical control character sequence with no line feed; line 36:
misplaced space ␌ here and ␍ here
                ^
WORD: "here": line 36:
misplaced space ␌ here and ␍ here
                  ^^^^
WORD: "and": line 36:
misplaced space ␌ here and ␍ here
                       ^^^
ERROR: vertical control character sequence with no line feed; line 36:
misplaced space ␌ here and ␍ here
                           ^
WORD: "here": line 36:
misplaced space ␌ here and ␍ here
                             ^^^^
LINE_BREAK: line 36:
misplaced space ␌ here and ␍ here
                                 ^
NUMERIC: "=<9=<8": line 37:
=<9=<8
^^^^^^
LINE_BREAK: line 37:
=<9=<8
      ^
QUOTED_STRING: "premature␣end␣of␣line": line 38:
"premature end of line
^^^^^^^^^^^^^^^^^^^^^^
ERROR: string ended by line break or end of file; line 38:
"premature end of line
                      ^
LINE_BREAK: line 38:
"premature end of line
                      ^
QUOTED_STRING: "premature␣end␣of␣file": line 39:
"premature end of file<END-OF-FILE>
^^^^^^^^^^^^^^^^^^^^^^
ERROR: string ended by line break or end of file; line 39:
"premature end of file<END-OF-FILE>
                      ^
ERROR: end of file not preceeded by a line break; line 39:
"premature end of file<END-OF-FILE>
                      ^
END_OF_FILE: line 39:
"premature end of file<END-OF-FILE>
                      ^
